Fixed header align

--- a/src/styles/custom-theme.scss
+++ b/src/styles/custom-theme.scss
@@ -11,7 +11,9 @@ html {
       supporting-text-size: 1rem,
       with-actions-content-padding: 0 24px 1px));
 
-  @include mat.toolbar-overrides((container-background-color: none));
+  @include mat.toolbar-overrides((container-background-color: none,
+      standard-height: 40px,
+      mobile-height: 40px));
 
   @include mat.snack-bar-overrides((supporting-text-color: #ffffff,
       button-color: #ffffff));
